# IXIWORKS-Tools

./: TASK.md  __init__.py  controlnet_nodes.py  layer_nodes.py  lora_nodes.py  pyproject.toml  requirements.txt  sample.json  sampler_nodes.py  storyboard_nodes.py  utility_nodes.py
docs/: PRD-LayerSeparation-2026-02-06.md  paper-draft-attention-layer-decomposition.md
experiments/: attention_hook_poc.py  test_step1_model_structure.py  test_step2_attention_capture.py  test_step3_comfyui_integration.py
js/: controlnet.js  imagetolist.js  lora.js  progress.js  wildcard_slot_color.js
preprocessors/: __init__.py  canny.py  depth.py  lineart.py  mlsd.py  openpose.py  util.py
